--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,15 @@
-body{
-    background-color: aqua;
+* {
+    margin: 0;
+    padding: 0;
+    border: none;
+    box-sizing: border-box;
 }
+
+body{
+    background-color: black;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    width: 100vw;
