--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,3 +14,20 @@ body{
     height: 100vh;
     width: 100vw;
 }
+
+
+
+#game-area {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: start;
+    justify-content: center;
+   
+    height: 95vh;
+    width: 95vw;
+    max-width: 2000px;
+    border-radius: 5%;
+
+    background: url(/assets/images/city-image.jpg);
+    background-size: cover ; 
+}
