--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,35 @@ body{
 }
 
 
+#score-board{
+    display: flex;
+    justify-content: space-around;
+    height:5vh;
+    width: 95vw;
+    max-width: 2000px;
+    }
+
+
+    #time{
+        background-color:black;
+        color: greenyellow;
+        border-radius: 15px;
+        font-size: 1.5rem;
+        border: 2px solid black;
+        padding: 2px 2px 2px 2px;
+        margin-bottom: 5px;
+        }
+        
+        #score{
+            background-color:black;
+            color: greenyellow;
+            border-radius: 15px;
+            font-size: 1.5rem;
+            border: 2px solid black;
+            padding: 2px 2px 2px 2px;
+            margin-bottom: 5px;
+            }
+
 
 #game-area {
     display: flex;
