--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,6 +34,7 @@ body{
         border: 2px solid black;
         padding: 2px 2px 2px 2px;
         margin-bottom: 5px;
+        font-family: orbitron;
         }
         
         #score{
@@ -44,6 +45,7 @@ body{
             border: 2px solid black;
             padding: 2px 2px 2px 2px;
             margin-bottom: 5px;
+            font-family: orbitron;
             }
 
 
@@ -78,4 +80,5 @@ body{
     border: 2px solid black;
     padding: 2px 10px 2px 10px;
     margin-top: 5px;
+    font-family: orbitron;
 }
