--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,7 +37,7 @@ body{
         font-family: orbitron;
         }
         
-        #score{
+        #player-score{
             background-color:black;
             color: greenyellow;
             border-radius: 15px;
@@ -46,6 +46,7 @@ body{
             padding: 2px 2px 2px 2px;
             margin-bottom: 5px;
             font-family: orbitron;
+            font-weight: bold;
             }
 
 
