--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,6 +35,7 @@ body{
         padding: 2px 2px 2px 2px;
         margin-bottom: 5px;
         font-family: orbitron;
+        font-weight: bold;
         }
         
         #player-score{
