--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,16 +17,17 @@ body{
 }
 
 
-#score-board{
+#score-board {
     display: flex;
     justify-content: space-around;
     height:5vh;
     width: 95vw;
     max-width: 2000px;
+    color: greenyellow;
     }
 
 
-    #time{
+    #time-display{
         background-color:black;
         color: greenyellow;
         border-radius: 15px;
@@ -59,7 +60,7 @@ body{
     height: 95vh;
     width: 95vw;
     max-width: 2000px;
-    border-radius: 5%;
+    border-radius:50px;
     background: url(/assets/images/city-image.jpg);
     background-size: cover; 
     border: 2px solid white;
@@ -73,6 +74,7 @@ body{
     width: 110px;
     padding: 5px;
     margin: 20px;
+    border-radius: 5px;
     background: url(/assets/images/alien.jpg);
     background-size: cover;
  
