Center background image and adjust ufo layout adding padding to top

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,6 +66,8 @@ body{
     background-size: cover; 
     border: 2px solid white;
     cursor:crosshair;
+    background-position: center;
+    padding-top: 50px;
 }
 
 
