--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,6 +49,7 @@ body{
             margin-bottom: 5px;
             font-family: orbitron;
             font-weight: bold;
+            flex-wrap: wrap;
             }
 
 
@@ -99,7 +100,7 @@ body{
     border-radius: 15px;
     font-size: 1.5rem;
     padding: 3px 10px 3px 10px;
-    margin-top: 5px 3px;
+    margin: 5px 3px;
     font-family: orbitron;
     font-weight: bold;
     border: 2px solid black;
