--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,7 +33,7 @@ body{
         font-size: 1.5rem;
         border: 2px solid black;
         padding: 2px 2px 2px 2px;
-        margin-bottom: 5px;
+        /* margin-bottom: 5px; */
         font-family: orbitron;
         font-weight: bold;
         flex-wrap: wrap;
@@ -46,7 +46,7 @@ body{
             font-size: 1.5rem;
             border: 2px solid black;
             padding: 2px 2px 2px 2px;
-            margin-bottom: 5px;
+            /* margin-bottom: 5px; */
             font-family: orbitron;
             font-weight: bold;
             flex-wrap: wrap;
@@ -161,3 +161,19 @@ width: 55%;
 
 
 
+/*.........media queries...............*/
+
+@media screen and (max-width: 350px) {
+    #game-area {
+        height: 80vh;
+        padding: 3px;
+        border-radius: 30px;
+        margin-top: 3px;
+    }
+
+
+    #score-board{
+      font-size: 0.6rem;
+      padding-top: 1px;
+    }
+}
