--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,7 +63,7 @@ body{
     width: 95vw;
     max-width: 2000px;
     border-radius:50px;
-    background: url(/assets/images/city-image.jpg);
+    background: url(assets/images/city-image.jpg);
     background-size: cover; 
     border: 2px solid white;
     cursor:crosshair;
@@ -79,7 +79,7 @@ body{
     padding: 5px;
     margin: 20px;
     border-radius: 5px;
-    background: url(/assets/images/alien.jpg);
+    background: url(assets/images/alien.jpg);
     background-size: cover;
  
     /*  background-size: cover;
@@ -89,7 +89,7 @@ body{
 }
 
 .ufo{
-    background: url(/assets/images/ufo.jpg);
+    background: url(assets/images/ufo.jpg);
     background-size: cover;
 }
 
