--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,14 +5,20 @@
     box-sizing: border-box;
 }
 
-body{
+html{
+    height: 100vh;
+}
+
+body {
     background-color: black;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     height: 100vh;
-    width: 100vw;
+    max-height: 100vh;
+    width: 100%;
+    max-width: 100%;
     /*border: 2px solid white;*/
 }
 
@@ -20,7 +26,7 @@ body{
 #score-board {
     display: flex;
     justify-content: space-around;
-    width: 95vw;
+    width: 95%;
     max-width: 2000px;
     color: greenyellow;
     }
@@ -59,8 +65,8 @@ body{
     justify-content: space-around;
     grid-template-rows: 200px;
  /* height: 0vh; */
-    height: 97vh;
-    width: 95vw;
+    height: 97%;
+    width: 95%;
     max-width: 2000px;
     border-radius:50px;
     background: url(../../assets/images/city-image.jpg);
@@ -127,7 +133,7 @@ body{
         display:flex;
         flex-wrap: wrap;
         justify-content: space-around;
-        height: 82vh;
+        height: 82%;
         padding: 3px;
         border-radius: 40px;
     }
@@ -140,10 +146,7 @@ body{
         font-weight: normal;
     }
 
-body {
-display: grid;
-grid-auto-rows: auto;
-}
+
 
 
 .spaceship{
@@ -165,7 +168,7 @@ width: 55%;
 
 @media screen and (max-width: 350px) {
     #game-area {
-        height: 80vh;
+        height: 80%;
         padding: 3px;
         border-radius: 30px;
         margin-top: 3px;
