--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,8 +6,8 @@
 }
 
 html{
-    min-height: 100vh;
-    max-height: 100vh;
+  
+    max-height: 100%;
 }
 
 body {
@@ -17,12 +17,24 @@ body {
     align-items: center;
     justify-content: center;
     height: 100vh;
-    max-height: 100vh;
+    max-height: 100%;
     width: 100%;
     max-width: 100%;
     /*border: 2px solid white;*/
 }
 
+#game-section {
+    background-color: black;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    max-height: 100%;
+    width: 100%;
+    max-width: 100%;
+
+}
 
 #score-board {
     display: flex;
