--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,18 +23,6 @@ body {
     /*border: 2px solid white;*/
 }
 
-#game-section {
-    background-color: black;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    max-height: 100%;
-    width: 100%;
-    max-width: 100%;
-
-}
 
 #score-board {
     display: flex;
@@ -78,8 +66,8 @@ body {
     justify-content: space-around;
     grid-template-rows: 200px;
  /* height: 0vh; */
-    height: 97%;
-    width: 95%;
+    height: 90%;
+    width: 85%;
     max-width: 2000px;
     border-radius:50px;
     background: url(../../assets/images/city-image.jpg);
@@ -159,7 +147,13 @@ body {
         font-weight: normal;
     }
 
+    #time-display{
+        font-size: 1.1rem;
+    }
 
+    #player-score{
+        font-size: 1.1rem; 
+    }
 
 
 .spaceship{
