--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -145,6 +145,44 @@ body {
 
 
 
+
+
+/*.................about...............*/
+
+#about-game-area{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 90%;
+    width: 85%;
+    max-width: 2000px;
+    border-radius:50px;
+    /* background: url(../../assets/images/zap-background-image.jpg); */
+    background-size: cover; 
+    /* border: 2px solid white; */
+    cursor:crosshair;
+    background-position: center;
+    padding-top: 50px;
+
+}
+
+#about-zap{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height:600px;
+    width:800px;
+    background-color: black;
+    /* border: 2px solid white; */
+    border-radius: 50px;
+    color: greenyellow;
+    font-family: orbitron;
+
+}
+
+
 /*.........media queries...............*/
 
 @media screen and (max-width: 480px) {
