Update background image size

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,12 +70,13 @@ body {
     width: 85%;
     max-width: 2000px;
     border-radius:50px;
-    background: url(../../assets/images/zap-background-image.jpg);
+    background: url(../../assets/images/zap-background-image4.jpg);
     background-size: cover; 
     border: 2px solid white;
     cursor:crosshair;
     background-position: center;
     padding-top: 50px;
+  
 }
 
 
@@ -186,6 +187,12 @@ body {
 
 }
 
+
+
+
+#about-zap > h1 {
+    font-size: 4rem;
+}
 
 
 
