--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -192,6 +192,20 @@ body {
 
 
 
+
+
+
+
+
+
+/*.........media queries...............*/
+@media screen and (max-width: 1400px) {
+   
+    .spaceship{
+        width: 100px;
+    }
+
+
 /*.........media queries...............*/
 
 @media screen and (max-width: 700px) {
