--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,7 +75,7 @@ body {
     border: 2px solid white;
     cursor:crosshair;
     background-position: center;
-    padding-top: 50px;
+    /* padding-top: 50px; */
   
 }
 
@@ -167,7 +167,7 @@ body {
     /* border: 2px solid white; */
     cursor:crosshair;
     background-position: center;
-    padding-top: 50px;
+    /* padding-top: 50px; */
 
 }
 
