--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -104,6 +104,8 @@ body {
     margin: 5px 10px;
     font-family: orbitron;
     font-weight: bold;
+    text-decoration: none;
+    color: black;
 }
 
 #about-btn:hover {
