--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,21 +21,23 @@ body {
     max-width: 100%;
 }
 
-.flex-container{
+
+
+/*.......................................Landing Page................................................*/
+.flex-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    color:greenyellow;
+    color: greenyellow;
     cursor: crosshair;
     font-family: orbitron;
     letter-spacing: 2px;
     text-align: center;
     margin: 20px;
-
 }
 
-#ufo-img-home{
+#ufo-img-home {
     height: 80px;
     width: 120px;
     padding: 5px;
@@ -46,14 +48,14 @@ body {
     background-repeat: no-repeat;
 }
 
-#h1-zapp{
+#h1-zapp {
     font-size: 4rem;
 }
 
-#hr-white{
-height: 4px;
-width: 100px;
-background-color: white;
+#hr-white {
+    height: 4px;
+    width: 100px;
+    background-color: white;
 }
 
 
@@ -61,18 +63,15 @@ background-color: white;
 
 
 
+/*..........................................Game Page..........................................*/
 
-
-
-
-#score-board {
+#game-scoreboard {
     display: flex;
     justify-content: space-around;
     width: 95%;
     max-width: 800px;
     color: greenyellow;
 }
-
 
 #time-display {
     background-color: black;
@@ -101,7 +100,6 @@ background-color: white;
     grid-template-columns: auto auto auto auto;
     justify-content: space-around;
     grid-template-rows: 200px;
-    /* height: 0vh; */
     height: 90%;
     width: 85%;
     max-width: 98%;
@@ -112,7 +110,6 @@ background-color: white;
     cursor: crosshair;
     background-position: center;
 }
-
 
 .spaceship {
     /* display: none; */
@@ -169,6 +166,10 @@ background-color: white;
     background-color: white;
 }
 
+
+
+/*.......css javascript classes . . . .*/
+
 .invisible {
     display: none;
 }
@@ -176,65 +177,6 @@ background-color: white;
 .visible {
     display: block;
 }
-
-
-/*.................about...............*/
-
-/* #about-spaceship{
-    height: 80px;
-    width: 120px;
-    padding: 5px;
-    margin: 20px;
-    border-radius: 5px;
-    background: url(../../assets/images/ufo2.png);
-    background-size: contain;
-    background-repeat: no-repeat;
-} */
-
-/* #about-game-area {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: start;
-    height: 90%;
-    width: 95%;
-    max-width: 98%;
-    border-radius: 50px;
-    background: url(../../assets/images/zap-background-image.jpg);
-    background-size: cover;
-    cursor: crosshair;
-    background-position: center;
-} */
-
-/* #about-zap {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 600px;
-    max-width: 800px;
-    background-color: black;
-    border-radius: 50px;
-    color: greenyellow;
-    font-family: orbitron;
-    letter-spacing: 2px;
-    text-align: center;
-} */
-
-/* #about-zap>h1 {
-    font-size: 4rem;
-} */
-
-/* #about-zap>hr {
-    height: 4px;
-    width: 100px;
-    background-color: white;
-} */
-
-
-
-
-
 
 
 
@@ -247,86 +189,86 @@ background-color: white;
     }
 }
 
-    /*.........media queries...............*/
+/*.........media queries...............*/
 
-    @media screen and (max-width: 700px) {
+@media screen and (max-width: 700px) {
 
-        #game-area {
-            grid-template-rows: 100px;
-            height: 80%;
-        }
-
-        .spaceship {
-            /* display: none; */
-            height: 60px;
-            width: 90px;
-            padding: 5px;
-            margin: 10px;
-        }
-
-        #game-buttons {
-            max-width: 100%;
-        }
+    #game-area {
+        grid-template-rows: 100px;
+        height: 80%;
     }
 
-        /*.........media queries...............*/
+    .spaceship {
+        /* display: none; */
+        height: 60px;
+        width: 90px;
+        padding: 5px;
+        margin: 10px;
+    }
 
-        @media screen and (max-width: 480px) {
-            #game-area {
-                display: flex;
-                flex-wrap: wrap;
-                justify-content: space-around;
-                height: 82%;
-                padding: 3px;
-                border-radius: 40px;
-                width: 96%;
-            }
+    #game-buttons {
+        max-width: 100%;
+    }
+}
 
-            #score-board {
-                display: flex;
-                justify-content: space-around;
-                height: 8vh;
-                font-size: 0.8rem;
-                font-weight: normal;
-            }
+/*.........media queries...............*/
 
-            #time-display {
-                font-size: 1.1rem;
-            }
+@media screen and (max-width: 480px) {
+    #game-area {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        height: 82%;
+        padding: 3px;
+        border-radius: 40px;
+        width: 96%;
+    }
 
-            #player-score {
-                font-size: 1.1rem;
-            }
+    #score-board {
+        display: flex;
+        justify-content: space-around;
+        height: 8vh;
+        font-size: 0.8rem;
+        font-weight: normal;
+    }
 
-            .spaceship {
-                /* display: none; */
-                height: 60px;
-                width: 90px;
-                padding: 0px;
-                margin: 5px;
-            }
+    #time-display {
+        font-size: 1.1rem;
+    }
 
-            #time-display {
-                width: 55%;
-            }
-        }
+    #player-score {
+        font-size: 1.1rem;
+    }
+
+    .spaceship {
+        /* display: none; */
+        height: 60px;
+        width: 90px;
+        padding: 0px;
+        margin: 5px;
+    }
+
+    #time-display {
+        width: 55%;
+    }
+}
 
 
-        /*.........media queries...............*/
+/*.........media queries...............*/
 
-        @media screen and (max-width: 350px) {
-            #game-area {
-                height: 80%;
-                width: 98%;
-                padding: 3px;
-                border-radius: 30px;
-                margin-top: 3px;
-            }
+@media screen and (max-width: 350px) {
+    #game-area {
+        height: 80%;
+        width: 98%;
+        padding: 3px;
+        border-radius: 30px;
+        margin-top: 3px;
+    }
 
-            #score-board {
-                font-size: 0.6rem;
-                padding-top: 1px;
-                margin-bottom: 2px;
+    #score-board {
+        font-size: 0.6rem;
+        padding-top: 1px;
+        margin-bottom: 2px;
 
-            }
-        }
+    }
+}
