--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -129,7 +129,7 @@ body {
     background-repeat: no-repeat;
 }
 
-#game-buttons {
+.game-buttons {
     display: flex;
     justify-content: space-around;
     width: 50%;
@@ -148,7 +148,7 @@ body {
     color: black;
 }
 
-.button-links-btn:hover {
+.game-buttons a:hover {
     background-color: white;
 }
 
