--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -285,6 +285,16 @@ body {
     }
 }
 
+#reset-btn {
+    font-size: 1rem;
+}
+
+#play-btn {
+    font-size: 1rem; 
+}
+.button-links{
+    font-size: 1rem; 
+}
 
 /*.........media queries...............*/
 
@@ -302,4 +312,24 @@ body {
         padding-top: 1px;
         margin-bottom: 2px;
     }
+
+
+#game-buttons{
+    display: inline-block;
+}
+
+#audio-on {
+font-size: 1rem;
+}
+
+#audio-off {
+    font-size: 1rem;
+    }
+
+    #reset-btn{
+        margin: 0px;
+        padding:2px 6px 2px 6px;
+    }
+
+    
 }
