Update css for enter link on landing page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -136,7 +136,7 @@ body {
     max-width: 600px;
 }
 
-.button-links {
+#enter-link {
     background-color: greenyellow;
     border-radius: 15px;
     font-size: 1.5rem;
