--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -125,6 +125,7 @@ body {
     border: 2px solid white;
     cursor: crosshair;
     background-position: center;
+    margin-top: 2px;
 }
 
 .spaceship {
@@ -150,6 +151,7 @@ body {
     justify-content: space-around;
     width: 100%;
     max-width: 600px;
+    margin-top: 5px;
 }
 
 .game-buttons a:hover {
@@ -246,7 +248,7 @@ body {
     background-color: rgba(36, 35, 35, 0.9); /* Black w/ opacity */
     margin: 10% auto; /* 15% from the top and centered */
     padding: 20px;
-    border: 4px solid black;
+    border: 4px solids silver;
     width: 60%; /* Could be more or less, depending on screen size */
     height: 50%;
     color:greenyellow;
