--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,6 +89,7 @@ body {
     color: greenyellow;
 }
 
+ /* Timer */
 #time-display {
     background-color: black;
     color: greenyellow;
@@ -100,6 +101,7 @@ body {
     flex-wrap: wrap;
 }
 
+ /* score display area*/
 #player-score {
     background-color: black;
     color: greenyellow;
@@ -111,6 +113,7 @@ body {
     flex-wrap: wrap;
 }
 
+ /* The game area */
 #game-area {
     display: grid;
     grid-template-columns: auto auto auto auto;
@@ -129,7 +132,6 @@ body {
 }
 
 .spaceship {
-    /* display: none; */
     height: 80px;
     width: 120px;
     padding: 5px;
@@ -237,19 +239,16 @@ body {
     overflow: auto; /* Enable scroll if needed */
     background-color: rgb(0,0,0); /*  color */
     background-color: rgb(0,0,0,0.4); /*  color */
-
   }
-    
-  
-  
-  /* Modal Content/Box */
+
+  /* Modal Content */
   .modal-content {
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(36, 35, 35, 0.9); /* Black w/ opacity */
-    margin: 10% auto; /* 15% from the top and centered */
+    background-color: rgb(0,0,0); 
+    background-color: rgba(36, 35, 35, 0.9); 
+    margin: 10% auto; 
     padding: 20px;
-    border: 4px solids silver;
-    width: 60%; /* Could be more or less, depending on screen size */
+    border: 4px solid silver;
+    width: 60%; 
     height: 50%;
     color:greenyellow;
     font-family: orbitron, verdana;
