--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -236,86 +236,6 @@ body {
 
 
 
-/* The Modal (background) */
-.modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    left: 0;
-    top: 10%;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /*  color */
-    background-color: rgb(0,0,0,0.4); /*  color */
-  }
-
-  /* Modal Content */
-  .modal-content {
-    background-color: rgb(0,0,0); 
-    background-color: rgba(36, 35, 35, 0.9); 
-    margin: 10% auto; 
-    padding: 20px;
-    border: 4px solid silver;
-    width: 60%; 
-    height: 50%;
-    color:greenyellow;
-    font-family: orbitron, verdana;
-    font-size: 1.2rem;
-    text-align: center;
-    border-radius: 15px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  /* The Close Button */
-  .close {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-  }
-  
-  .close:hover,
-  .close:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
-  }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -451,3 +371,69 @@ body {
         font-size: 1.1rem;
     }
 }
+
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 10%;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /*  color */
+    background-color: rgb(0,0,0,0.4); /*  color */
+    color:greenyellow;
+
+  }
+    
+  
+  
+  /* Modal Content/Box */
+  .modal-content {
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(36, 35, 35, 0.9); /* Black w/ opacity */
+    margin: 10% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 4px solid greenyellow;
+    width: 60%; /* Could be more or less, depending on screen size */
+    height: 50%;
+    color:greenyellow;
+    font-family: orbitron, verdana;
+    font-size: 1.2rem;
+    text-align: center;
+    border-radius: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  /* The Close Button */
+  .close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
+
+
+
+
+
+
+
+
+
+
+
+
+
